finished fetching api, made infinite scroll

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -40,13 +40,17 @@
 .search-input{
     padding:15px;
     font-size:16px;
-    color:#757575;
+    color:#000;
     border-radius: 5px 0 0 5px;
     width:400px;
     outline:none;
     line-height: 16px;
     height:46px;
     box-shadow: 0 0 20px #AABBCC;
+}
+
+.search-input::placeholder{
+    color:#757575;
 }
 
 .search-btn{
@@ -101,6 +105,7 @@
 
 .attraction-box a{
     text-decoration:none;
+    cursor: pointer;
     display: block;
 }
 
@@ -109,7 +114,7 @@
     object-fit: cover;
     object-position: 50% 50%;
     overflow: hidden;
-    height: calc((25vw - 30px) * 0.6) ;
+    height:162px;
 }
 
 .attraction-text-container{
@@ -121,28 +126,29 @@
 }
 
 .attraction-title{
-    margin-top:13px;
+    margin:13px 0 15px;
     font-weight: 700;
-    height: 20px;
 }
 
 .attraction-info{
     display: flex;
     justify-content:space-between;
-    margin:15px 0 12px;
+    margin:auto 0 12px;
     font-weight: 400;
-    height: 20px;
+    height:100%;
 }
 
-
-
+.attractions-container span{
+    color: #757575;
+    margin: 0 auto;
+}
 
 /***************************************/
 /************* media query *************/
 /***************************************/
 
 /* for smaller desktop screen */
-@media only screen and (max-width:1350px){
+@media only screen and (max-width:1333px){
 
     .hero-bg{
         background-position: bottom right, top;
