finish RWD mobile layout (below 600px) of attraction page

--- a/static/css/attraction.css
+++ b/static/css/attraction.css
@@ -15,7 +15,7 @@
 }
 
 .bottom-container{
-    margin:50px 10px 0;
+    margin:50px 10px 120px;
     display:flex;
     flex-direction: column;
 }
@@ -32,9 +32,9 @@
 }
 
 .photo{
-    width: 100%;
     object-position: 50% 50%;
     object-fit: cover;
+    overflow: hidden
 }
 
 .left, .right{
@@ -189,12 +189,49 @@ input[type=radio]:checked + label:before{
     margin-bottom: 10px;
 }
 
-.transportation{
-    margin-bottom:120px;
+
+/***************************************/
+/************* media query *************/
+/***************************************/
+@media only screen and (max-width:600px){
+
+    .whole-container{
+        width:100%;
+    }
+
+    .top-container{
+        flex-direction: column;
+        margin:40px 0 0;
+        padding:0 0 40px;
+        width:100%;
+    }
+
+    .image-slider{
+        width:100%;
+        height: 350px;
+        border-radius:0;
+    }
+
+    .photo{
+        overflow: hidden;
+    }
+
+    .attraction-booking{
+        margin: 25px 0 0;
+        width: 100%;
+        padding: 0 10px;
+    }
+
+    .booking-area{
+        width:100%;
+        background-color:#E8E8E8;
+        border-radius:5px;
+        padding: 20px;
+    }
+
+    .bottom-container{
+        width:100%;
+        padding:0 20px;
+        margin: 50px 0 110px;
+    }
 }
-
-
-
-
-
-
