--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -24,9 +24,10 @@
             <section class="attraction-booking">
                 <h3 class="header3-bold title">平安鐘</h3>
                 <p class="body-reg info"><span id="category">公共藝術</span> at <span id="mrt">忠孝復興</span></p>
+                
                 <article class="booking-area">
                     <p class="body-bold">訂購導覽行程</p>
-                    <p class="body-reg">以此景點為中心的一日行程，帶您探索城市角落故事</p>
+                    <p class="content-reg">以此景點為中心的一日行程，帶您探索城市角落故事</p>
 
                     <form action="/booking" class="booking-form">
                         <div class="date-selection">
