--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-wrapper">
             <div class="header-container">
-                <h1>台北一日遊</h1>
+                <h1><a href="/">台北一日遊</a></h1>
                 <nav class="header-navbar">
                     <ul>
                         <li><a href="#">預定行程</a></li>
