--- a/static/css/attraction.css
+++ b/static/css/attraction.css
@@ -21,9 +21,10 @@
 }
 
 
-/************* photo slider *************/
+/************* carousel *************/
 
-.image-slider{
+/* carousel container and images */
+.carousel{
     width:540px;
     height:400px;
     border-radius:5px;
@@ -31,11 +32,30 @@
     overflow: hidden;
 }
 
-.photo{
-    object-position: 50% 50%;
-    object-fit: cover;
-    overflow: hidden
+.carousel-slide{
+    position:relative;
+    width: 100%;
+    height: 100%;
 }
+
+.carousel-slide img{
+    position: absolute;
+    object-fit: cover;
+    object-position: center center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width:100%;
+    height: 100%;
+    opacity: 1;
+    transition: opacity 0.3s;
+}
+
+.carousel-slide .hide{
+    opacity: 0;
+}
+
+/* arrow */
 
 .left, .right{
     position: absolute;
@@ -43,7 +63,9 @@
     transform:translateY(-50%);
     width:36px;
     height: 36px;
-    filter: opacity(0.8);
+    opacity:0.6;
+    z-index: 1;
+    transition:opacity 0.2s;
 }
 
 .left{
@@ -53,6 +75,68 @@
 .right{
     right:10px;
 }
+
+.left:hover, 
+.right:hover{
+    opacity:0.8;
+}
+
+.left:active, 
+.right:active{
+    opacity:1;
+}
+
+
+/* images indicator */
+.indicator-group{
+    position:absolute;
+    bottom:10px;
+    left: 50%;
+    transform:translateX(-50%);
+    z-index: 1;
+}
+
+.indicator{
+    width:12px;
+    height: 12px;
+    border-radius:50%;
+    background-color:#fff;
+    border: 1px solid #fff;
+    opacity: 0.7;
+    display: inline-block;
+    transition: background-color 0.3s;
+}
+
+.indicator:first-child ~ div{
+    margin-left:12px;
+}
+
+.indicator.current{
+    background-color:#000;
+}
+
+/* loader */
+
+.loader{
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    margin:auto;
+    border: 6.75px solid #F8F8F8;
+    border-top: 6.75px solid #d7eaf1;
+    width: 67.5px;
+    height:67.5px;
+    border-radius: 50%;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin{
+    0% { transform: rotate(0deg);}
+    100% { transform: rotate(360deg);}
+}
+
 
 
 /************* booking *************/
@@ -206,7 +290,7 @@ input[type=radio]:checked + label:before{
         width:100%;
     }
 
-    .image-slider{
+    .carousel{
         width:100%;
         height: 350px;
         border-radius:0;
@@ -214,6 +298,7 @@ input[type=radio]:checked + label:before{
 
     .photo{
         overflow: hidden;
+        width:auto;
     }
 
     .attraction-booking{
