fix division line not matching with design issue

--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -50,6 +50,8 @@
             </section>
         </div>
 
+        <div class="division-line"></div>
+
         <div class="bottom-container">
 
             <article class="content-reg description" id="description"></article>
