--- a/static/css/attraction.css
+++ b/static/css/attraction.css
@@ -11,6 +11,10 @@
     display:flex;
     flex-direction: row;
     padding:0 15px 40px;
+}
+
+.division-line{
+    width:100%;
     border-bottom: 1px solid #E8E8E8;
 }
 
@@ -288,6 +292,11 @@ input[type=radio]:checked + label:before{
         margin:40px 0 0;
         padding:0 0 40px;
         width:100%;
+    }
+
+    .division-line{
+        width:calc(100% - 20px);
+        margin: 0 auto;
     }
 
     .carousel{
