--- a/static/css/attraction.css
+++ b/static/css/attraction.css
@@ -116,7 +116,7 @@
 }
 
 .indicator.current{
-    background-color:#000;
+    background-color:#448899;
 }
 
 /* loader */
@@ -289,7 +289,7 @@ input[type=radio]:checked + label:before{
 
     .top-container{
         flex-direction: column;
-        margin:40px 0 0;
+        margin:0;
         padding:0 0 40px;
         width:100%;
     }
