--- a/static/css/style.css
+++ b/static/css/style.css
@@ -118,6 +118,103 @@ footer p{
     font-weight: 700;
 }
 
+/********** pop up modal **********/
+
+.pop-up.hide{
+    display:none;
+}
+
+.pop-up{
+    position:fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100vh;
+    background-color:rgba(0,0,0,0.25);
+    z-index:3;
+}
+
+.pop-up-modal{
+    position: relative;
+    width: 340px;
+    background-color: #fff;
+    border-radius: 6px;
+    margin: 80px auto 0;
+    padding: 15px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    box-shadow: 0 0 60px #AAAAAA;
+}
+
+.top-gradient{
+    position: absolute;
+    top:0;
+    width:100%;
+    height: 10px;
+    background:linear-gradient(270deg, #337788, #66AABB);
+}
+
+.pop-up-modal h3{
+    text-align: center;
+    margin: 15px auto;
+}
+
+.pop-up-modal form{
+    width: 100%;
+}
+
+.close{
+    position: absolute;
+    width:16px;
+    height: 16px;
+    top: 27px;
+    right: 17px;
+}
+
+.form-control{
+    width: 100%;
+}
+
+.form-control input{
+    width:100%;
+    padding: 15px;
+    border: 1px solid #ccc;
+    border-radius:5px;
+    color: #000;
+    margin-bottom: 10px;
+    outline: none;
+}
+
+.form-control input::placeholder{
+    color: #666;
+}
+
+.form-control i,
+.form-control small{
+    display: none;
+}
+
+.pop-up-modal button{
+    width: 100%;
+    border-radius: 5px;
+    padding: 10px 20px;
+    background-color: #448899;
+    margin-bottom: 10px;
+    text-align: center;
+    color: #fff;
+    line-height: 27px;
+    vertical-align:middle;
+}
+
+.pop-up-modal p{
+    line-height:22px;
+    vertical-align:middle;
+}
+
+
+
 
 /********** font **********/
 
