--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename='css/normalize.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
+    <script src="https://kit.fontawesome.com/3a81fc5582.js" crossorigin="anonymous"></script>
     {% block css %}{% endblock %}
     <title>{% block title %}{% endblock %}</title>
 </head>
@@ -17,14 +18,68 @@
                 <nav class="header-navbar">
                     <ul>
                         <li><a href="#">預定行程</a></li>
-                        <li><a href="#">登入/註冊</a></li>
+                        <li id="logInSignUp">登入/註冊</li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
 
-    <main>{% block main %}{% endblock %}</main>
+    <main>
+        <!-- log in pop up -->
+        <section class="pop-up hide" id="logIn">
+            <div class=pop-up-modal>
+                <img src="{{url_for('static', filename='images/icon_close.png')}}" alt="關閉" class="close" id=logInClose>
+                <div class="top-gradient"></div>
+                <h3 class="header3-bold">登入會員帳號</h3>
+                <form action="#" method="post">
+                    <div class="form-control">
+                        <input type="email" placeholder="輸入電子信箱" name="email" class="input body-reg">
+                        <i class="fas fa-exclamation-circle"></i>
+                        <small>Error Message</small>
+                    </div>
+                    <div class="form-control">
+                        <input type="password" placeholder="輸入密碼" name="password" class="input body-reg">
+                        <i class="fas fa-exclamation-circle"></i>
+                        <small>Error Message</small>
+                    </div>
+                    <button class=button-reg>登入帳戶</button>
+                </form>
+                <p class="body-reg">還沒有帳戶？點此註冊</p>
+            </div>
+        </section>
+
+        <!-- sign up pop up -->
+        <section class="pop-up hide" id="signUp">
+            <div class="pop-up-modal">
+                <img src="{{url_for('static', filename='images/icon_close.png')}}" alt="關閉" class="close" id=signUpClose>
+                <div class="top-gradient"></div>
+                <h3 class="header3-bold">註冊會員帳號</h3>
+                <form action="#" method="post">
+                    <div class="form-control">
+                        <input type="text" placeholder="輸入姓名" name="email" class="input body-reg">
+                        <i class="fas fa-exclamation-circle"></i>
+                        <small>Error Message</small>
+                    </div>
+                    <div class="form-control">
+                        <input type="email" placeholder="輸入電子信箱" name="email" class="input body-reg">
+                        <i class="fas fa-exclamation-circle"></i>
+                        <small>Error Message</small>
+                    </div>
+                    <div class="form-control">
+                        <input type="password" placeholder="輸入密碼" name="password" class="input body-reg">
+                        <i class="fas fa-exclamation-circle"></i>
+                        <small>Error Message</small>
+                    </div>
+                    <button class=button-reg>註冊新帳戶</button>
+                </form>
+                <p class="body-reg">已經有帳戶了？點此登入</p>
+            </div>
+        </section>
+
+        {% block main %}{% endblock %}
+
+    </main>
 
     <footer>
         <p>COPYRIGHT © 2021 台北一日遊</p>
