--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
                 <h3 class="header3-bold">註冊會員帳號</h3>
                 <form action="#" method="post">
                     <div class="form-control">
-                        <input type="text" placeholder="輸入姓名" name="email" class="input body-reg">
+                        <input type="text" placeholder="輸入姓名" name="name" class="input body-reg">
                         <i class="fas fa-exclamation-circle"></i>
                         <small>Error Message</small>
                     </div>
