--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,81 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap');
 
+/********** color palette **********/
+
+:root {
+    --teal:#448899;
+    --teal-dark: #337788;
+    --teal-light: #66AABB;
+    --text-grey: #666666;
+    --input-border: 1px solid #ccc;
+    --input-error-border: 1.5px solid #be7749;
+    --division-line: 1px solid #e8e8e8;
+    --error: #be7749;
+    --success:  #55aaaa; 
+  }
+
+
+/********** font **********/
+
+.header1-bold{
+    font-weight: 700;
+    font-size:28px;
+}
+
+.header2-bold{
+    font-weight:700;
+    font-size:30px;
+    line-height:34px;   
+}
+
+.header3-bold{
+    font-weight: 700;
+    font-size:24px;
+    line-height:24px;
+}
+
+.header3-reg{
+    font-weight: 400;
+    font-size:24px;
+    line-height:24px;
+}
+
+.button-bold{
+    font-weight: 700;
+    font-size: 19px;
+}
+
+.button-reg{
+    font-weight: 400;
+    font-size:19px;
+    line-height:19px;
+}
+
+.content-bold{
+    font-weight: 700;
+    font-size:16px;
+    line-height: 30px;
+}
+
+.content-reg{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+}
+
+.body-reg{
+    font-weight: 400;
+    font-size: 16px;
+    line-height:16px;
+}
+
+.body-bold{
+    font-weight: 700;
+    font-size: 16px;
+    line-height:16px;
+}
+
+
 /********** general setting **********/
 
 html,body{
@@ -338,8 +414,6 @@ footer p{
     width: 250px;
 }
 
-
-
 .checkmark {
     stroke: #448899;
     stroke-dashoffset: 745.74853515625;
@@ -354,69 +428,6 @@ footer p{
     100% {
         stroke-dashoffset: 0;
     }
-}
-
-
-
-
-/********** font **********/
-
-.header1-bold{
-    font-weight: 700;
-    font-size:28px;
-}
-
-.header2-bold{
-    font-weight:700;
-    font-size:30px;
-    line-height:34px;   
-}
-
-.header3-bold{
-    font-weight: 700;
-    font-size:24px;
-    line-height:24px;
-}
-
-.header3-reg{
-    font-weight: 400;
-    font-size:24px;
-    line-height:24px;
-}
-
-.button-bold{
-    font-weight: 700;
-    font-size: 19px;
-}
-
-.button-reg{
-    font-weight: 400;
-    font-size:19px;
-    line-height:19px;
-}
-
-.content-bold{
-    font-weight: 700;
-    font-size:16px;
-    line-height: 30px;
-}
-
-.content-reg{
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 30px;
-}
-
-.body-reg{
-    font-weight: 400;
-    font-size: 16px;
-    line-height:16px;
-}
-
-.body-bold{
-    font-weight: 700;
-    font-size: 16px;
-    line-height:16px;
 }
 
 
