finish build booking api

--- a/static/css/booking.css
+++ b/static/css/booking.css
@@ -128,6 +128,7 @@
 }
 
 .confirm button:hover{
+    cursor: pointer;
     background-color: var(--teal-dark);
 }
 
@@ -157,6 +158,7 @@
         margin-bottom: 30px;
         max-width: 400px;
         width: 90%;
+        padding: 0;
     }
 
     .booking-detail p:last-child{
@@ -182,11 +184,13 @@
     }
 
     .booking-attraction{
+        width:100%;
         padding: 0 0 40px;
     }
 
     .attraction-image-container{
         width: 100%;
+        max-width: none;
         padding:0;
     }
 
@@ -196,6 +200,3 @@
         padding: 40px 0;
     }
 }
-
-
-
