--- a/templates/booking.html
+++ b/templates/booking.html
@@ -30,19 +30,19 @@
                     <h3>您的聯絡資訊</h3>
                     <div class="form-control">
                         <label for="bookingName">聯絡姓名：</label>
-                        <input type="text" id="contactName" placeholder="您的姓名" name="name" class="body-reg" id="bookingName">
+                        <input type="text" id="bookingName" placeholder="您的姓名" name="name" class="body-reg" id="bookingName">
                         <img src="{{url_for('static', filename='images/exclamation-mark.png')}}" alt="">
                         <small>Error Message</small>
                     </div>
                     <div class="form-control">
                         <label for="bookingEmail">連絡信箱：</label>
-                        <input type="email" id="contactEmail" placeholder="您的電子信箱" name="email" class="body-reg" id="bookingEmail">
+                        <input type="email" id="bookingEmail" placeholder="您的電子信箱" name="email" class="body-reg" id="bookingEmail">
                         <img src="{{url_for('static', filename='images/exclamation-mark.png')}}" alt="">
                         <small>Error Message</small>
                     </div>
                     <div class="form-control">
                         <label for="bookingPhone">連絡信箱：</label>
-                        <input type="tel" id="contactPhone" placeholder="您的手機號碼" name="phone" class="body-reg" id="bookingPhone" pattern="[0-9]{4}-[0-9]{3}-[0-9]{3}">
+                        <input type="tel" id="bookingPhone" placeholder="您的手機號碼" name="phone" class="body-reg" id="bookingPhone" pattern="[0-9]{4}-[0-9]{3}-[0-9]{3}">
                         <img src="{{url_for('static', filename='images/exclamation-mark.png')}}" alt="">
                         <small>Error Message</small>
                     </div>
