finish front end booking page data rendering

--- a/static/css/attraction.css
+++ b/static/css/attraction.css
@@ -119,6 +119,11 @@
     background-color:#448899;
 }
 
+.form-control.error small{
+    text-align: left;
+    margin: 0 0px 15px 170px;
+}
+
 /* loader */
 
 .loader{
