--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
                 <h1><a href="/">台北一日遊</a></h1>
                 <nav class="header-navbar">
                     <ul>
-                        <li><a href="#">預定行程</a></li>
+                        <li id="bookingLink">預定行程</li>
                         <li class="hide" id="logInSignUp">登入/註冊</li>
                         <li class="hide" id="logOut" hidden>登出系統</li>
                     </ul>
@@ -119,6 +119,7 @@
 
     <script src="{{url_for('static', filename='js/isLogIn.js')}}"></script>
     <script src="{{url_for('static', filename='js/logInSignUp.js')}}"></script>
+    <script src="{{url_for('static', filename='js/navbarBooking.js')}}"></script>
     {% block script %}{% endblock %}
 </body>
 </html>
