--- a/static/css/booking.css
+++ b/static/css/booking.css
@@ -1,202 +1,242 @@
-.main-container{
-    width: 90%;
-    max-width:1200px;
-    margin: 46px auto 0;
+.main-container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 46px auto 0;
+}
+
+.main-container h2 {
+  margin-left: 100px;
+}
+
+.hide-before-log-in {
+  display: none;
 }
 
 /***** booking attraction info *****/
 
-.booking-attraction{
-    width: 100%;
-    padding: 0 100px 40px;
-    border-bottom: var(--division-line);
+/* no booking */
+.no-booking-message {
+  margin: 35px 0 40px 100px;
 }
 
-.booking-attraction-info{
-    display:flex;
-    flex-direction: row;
-    margin-top:35px;
+.footer-no-booking {
+  flex-grow: 1;
 }
 
-.attraction-image-container{
-    padding: 0 10px;
-    height: 200px;
-    width: 266px;
+.main-no-booking {
+  flex-grow: 0;
 }
 
-.attraction-image-container img{
-    width:100%;
-    height: 100%;
-    object-fit:cover;
-    object-position: 50% 50%;
+.hide {
+  display: none;
 }
 
-.booking-detail{
-    margin-left:22px;
+/* attractions */
+
+.booking-attraction {
+  width: 100%;
+  padding: 0 100px 40px;
+  border-bottom: var(--division-line);
 }
 
-.booking-detail h3{
-    color: var(--teal);
-    margin:5px 0 30px;
+.booking-attraction-info {
+  display: flex;
+  flex-direction: row;
+  margin-top: 35px;
 }
 
-.booking-detail p{
-    margin-bottom: 20px;
+.attraction-image-container {
+  padding: 0 10px;
+  height: 200px;
+  width: 266px;
 }
 
-.booking-detail span{
-    margin-left: 5px;
+.attraction-image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
 }
 
-.delete{
-    width: 30px;
-    height: 30px;
-    margin:0 10px 0 auto;
-    cursor: pointer;
-    opacity: 0.8;
-    transition: opacity 0.2s;
-}
-.delete:hover{
-    opacity: 1;
+.booking-detail {
+  margin-left: 22px;
 }
 
+.booking-detail h3 {
+  color: var(--teal);
+  margin: 5px 0 30px;
+}
+
+.booking-detail p {
+  margin-bottom: 20px;
+}
+
+.booking-detail span {
+  margin-left: 5px;
+}
+
+.delete {
+  width: 30px;
+  height: 30px;
+  margin: 0 10px 0 auto;
+  cursor: pointer;
+  opacity: 0.8;
+  transition: opacity 0.2s;
+}
+.delete:hover {
+  opacity: 1;
+}
 
 /***** contact and payment info *****/
-.contact-payment-info{
-    width:100%;
+.contact-payment-info {
+  width: 100%;
 }
 
-.booking-form label{
-    display:inline-block;
+.booking-form label {
+  display: inline-block;
 }
 
-.booking-form input{
-    padding: 10px;
-    width: 200px;
-    margin-bottom: 0;
+.booking-form input {
+  padding: 10px;
+  width: 200px;
+  margin-bottom: 0;
 }
 
-.booking-form input::placeholder{
-    color: #757575;
+.booking-form input::placeholder {
+  color: #757575;
 }
 
-.contact-info, 
-.payment-info{
-    width:100%;
-    padding: 40px 110px;
-    border-bottom: var(--division-line);
+.contact-info,
+.payment-info {
+  width: 100%;
+  padding: 40px 110px;
+  border-bottom: var(--division-line);
 }
 
-.payment-info{
-    padding-bottom: 25px;
+.payment-info {
+  padding-bottom: 25px;
 }
 
-.contact-info h3, 
-.payment-info h3{
-    margin: 4px 0 24px;
+.contact-info h3,
+.payment-info h3 {
+  margin: 4px 0 24px;
 }
 
-.form-control{
-    margin-bottom: 15px;
+.form-control {
+  margin-bottom: 15px;
 }
 
-.contact-info p{
-    margin: 20px 0 5px;
-    line-height: 24px;
+.contact-info p {
+  margin: 20px 0 5px;
+  line-height: 24px;
 }
 
 /***** confirm *****/
-.confirm{
-    width:100%;
-    padding: 40px 110px;
-    display:flex;
-    flex-direction: column;
-    align-items:flex-end;
-    margin-bottom: 22px;
+.confirm {
+  width: 100%;
+  padding: 40px 110px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-bottom: 22px;
 }
 
-.confirm p{
-    margin: 3px 0 25px;
+.confirm p {
+  margin: 3px 0 25px;
 }
 
-.confirm button{
-    background-color: var(--teal);
-    color:#fff;
-    padding: 10px 20px;
-    border-radius: 5px;
-    transition: background-color 0.2s;
+.confirm button {
+  background-color: var(--teal);
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: background-color 0.2s;
 }
 
-.confirm button:hover{
-    cursor: pointer;
-    background-color: var(--teal-dark);
+.confirm button:hover {
+  cursor: pointer;
+  background-color: var(--teal-dark);
 }
 
-.confirm button:active{
-    background-color: var(--teal-light);
+.confirm button:active {
+  background-color: var(--teal-light);
 }
-
 
 /*************************************/
 /*********** media query *************/
 /*************************************/
 
-@media only screen and (max-width:860px){
-    .booking-attraction{
-        padding:0 10vw 30px;
-    }
+@media only screen and (max-width: 860px) {
+  .main-container h2 {
+    margin-left: 10vw;
+  }
 
-    .booking-attraction-info{
-        flex-direction: column;
-    }
+  .no-booking-message {
+    margin-left: 10vw;
+  }
 
-    .booking-detail{
-        margin:0;
-    }
+  .booking-attraction {
+    padding: 0 10vw 30px;
+  }
 
-    .attraction-image-container{
-        margin-bottom: 30px;
-        max-width: 400px;
-        width: 90%;
-        padding: 0;
-    }
+  .booking-attraction-info {
+    flex-direction: column;
+  }
 
-    .booking-detail p:last-child{
-        margin-bottom: 0px;
-    }
-    
-    .contact-info, 
-    .payment-info{
-        width:100%;
-        padding: 40px 10vw;
-    }
+  .booking-detail {
+    margin: 0;
+  }
 
-    .confirm{
-        padding: 40px 10vw;
-    }
+  .attraction-image-container {
+    margin-bottom: 30px;
+    max-width: 400px;
+    width: 90%;
+    padding: 0;
+  }
+
+  .booking-detail p:last-child {
+    margin-bottom: 0px;
+  }
+
+  .contact-info,
+  .payment-info {
+    width: 100%;
+    padding: 40px 10vw;
+  }
+
+  .confirm {
+    padding: 40px 10vw;
+  }
 }
 
+@media only screen and (max-width: 450px) {
+  .main-container {
+    width: 100%;
+    padding: 0 10px;
+  }
 
-@media only screen and (max-width:450px){
-    .main-container{
-        width: 100%;
-        padding: 0 10px;
-    }
+  .main-container h2 {
+    margin-left: 0;
+  }
 
-    .booking-attraction{
-        width:100%;
-        padding: 0 0 40px;
-    }
+  .no-booking-message {
+    margin-left: 0;
+  }
 
-    .attraction-image-container{
-        width: 100%;
-        max-width: none;
-        padding:0;
-    }
+  .booking-attraction {
+    width: 100%;
+    padding: 0 0 40px;
+  }
 
-    .contact-info, 
-    .payment-info,
-    .confirm{
-        padding: 40px 0;
-    }
+  .attraction-image-container {
+    width: 100%;
+    max-width: none;
+    padding: 0;
+  }
+
+  .contact-info,
+  .payment-info,
+  .confirm {
+    padding: 40px 0;
+  }
 }
